--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "rules": {
         "react/jsx-uses-react": "error",
         "react/jsx-uses-vars": "error",
+        "react/prop-types": "off",
         "prettier/prettier": "error",
         "react/react-in-jsx-scope": "off",
         "no-param-reassign": "off",
