--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-native": "0.63.4",
     "react-native-gesture-handler": "1.9.0",
     "react-native-maps": "0.27.1",
-    "react-native-svg": "12.1.0",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "2.17.1"
+    "react-native-screens": "2.17.1",
+    "react-redux": "7.2.2",
+    "redux": "4.0.5",
+    "redux-actions": "2.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
