--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
+    "react-native-safe-area-view": "1.1.1",
     "react-native-screens": "2.17.1",
     "react-redux": "7.2.2",
     "redux": "4.0.5",
-    "redux-actions": "2.6.5"
+    "redux-actions": "2.6.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
