--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: "com.android.application"
 
+apply plugin: "com.google.gms.google-services"
+
 import com.android.build.OutputFile
 
 /**
@@ -187,6 +189,9 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
     
+    // Import the Firebase BoM
+    implementation platform("com.google.firebase:firebase-bom:26.4.0")
+
     implementation(project(':react-native-maps')){
        exclude group: 'com.google.android.gms', module: 'play-services-base'
        exclude group: 'com.google.android.gms', module: 'play-services-maps'
