--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-jest": "^26.6.3",
     "eslint": "^7.18.0",
     "eslint-plugin-import": "^2.22.1",
+    "expo": "^41.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
     "react-test-renderer": "16.13.1"
